tests/baselines/reference/declarationEmitInferredTypeAlias5.errors.txt
1.ts(3,9): error TS2869: This expression is always truthy. Did you mean to test something else?


==== 0.ts (0 errors) ====
    export type Data = string | boolean;
    let obj: Data = true;
    
==== 1.ts (1 errors) ====
    import * as Z from "./0"
    //let v2: Z.Data;
    let v = "str" || true;
            ~~~~~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?
    export { v }